static/docs/1.3.0/api/python/_sources/generated/gravitino.exceptions.base.rst.txt
.. Licensed to the Apache Software Foundation (ASF) under one
   or more contributor license agreements.  See the NOTICE file
   distributed with this work for additional information
   regarding copyright ownership.  The ASF licenses this file
   to you under the Apache License, Version 2.0 (the
   "License"); you may not use this file except in compliance
   with the License.  You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing,
   software distributed under the License is distributed on an
   "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
   KIND, either express or implied.  See the License for the
   specific language governing permissions and limitations
   under the License.
   
gravitino.exceptions.base
=========================

.. automodule:: gravitino.exceptions.base
  
   
   
   

   
   
   

   
   
   

   
   
   .. rubric:: Exceptions

   .. autosummary::
      :toctree:                                          
   
      AlreadyExistsException
      BadRequestException
      CatalogAlreadyExistsException
      CatalogInUseException
      CatalogNotInUseException
      ConnectionFailedException
      ForbiddenException
      FunctionAlreadyExistsException
      GravitinoRuntimeException
      GroupAlreadyExistsException
      IllegalArgumentException
      IllegalJobTemplateOperationException
      IllegalMetadataObjectException
      IllegalNameIdentifierException
      IllegalNamespaceException
      IllegalPrivilegeException
      IllegalRoleException
      IllegalStateException
      IllegalStatisticNameException
      InUseException
      InternalError
      JobTemplateAlreadyExistsException
      MetalakeAlreadyExistsException
      MetalakeInUseException
      MetalakeNotInUseException
      ModelAlreadyExistsException
      ModelVersionAliasesAlreadyExistException
      NoSuchCatalogException
      NoSuchCredentialException
      NoSuchFilesetException
      NoSuchFunctionException
      NoSuchGroupException
      NoSuchJobException
      NoSuchJobTemplateException
      NoSuchLocationNameException
      NoSuchMetadataObjectException
      NoSuchMetalakeException
      NoSuchModelException
      NoSuchModelVersionException
      NoSuchModelVersionURINameException
      NoSuchPartitionException
      NoSuchRoleException
      NoSuchSchemaException
      NoSuchTableException
      NoSuchTagException
      NoSuchUserException
      NonEmptySchemaException
      NotEmptyException
      NotFoundException
      NotInUseException
      PartitionAlreadyExistsException
      RESTException
      RoleAlreadyExistsException
      SchemaAlreadyExistsException
      TableAlreadyExistsException
      TagAlreadyAssociatedException
      TagAlreadyExistsException
      UnauthorizedException
      UnknownError
      UnmodifiableStatisticException
      UnsupportedOperationException
      UserAlreadyExistsException
   
   



